yaml-demo/nginx-ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: foo.mxnavi.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
